# dotfiles

./: .ansible-lint  .chezmoi.toml.tmpl  .chezmoiignore  .editorconfig  .gitattributes  .gitignore  .lefthook.yaml  .mise.toml  .prettierignore  .prettierrc.yaml  .shellcheckrc  .styluaignore  .taplo.toml  .yamllint.yaml  Brewfile  Gemfile  LICENSE  README.md  TODO.md  biome.jsonc  bun.lockb  deno.json  deno.jsonc  eslint.config.mts  lefthook.yml  mise.toml  oxlint.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.yml  taplo.toml  tombi.toml
.chezmoidata/: packages.yaml
.chezmoiscripts/darwin/: run_onchange_after_bat.zsh.tmpl  run_onchange_before_darwin-install-packages.zsh.tmpl  run_onchange_brew_bundle.zsh.tmpl
.chezmoiscripts/windows/: run_onchange_after_ruff_completion.ps1.tmpl  run_onchange_scoop-install-packages.ps1.tmpl
.chezmoitemplates/brew/: forbidden.yaml
.chezmoitemplates/carapace/: commands.yaml
.chezmoitemplates/chezmoi/: ignore.yaml
.chezmoitemplates/zsh/: carapace  swift
.config/: ansible-lint.yml  lefthook.yml  rumdl.toml
.config/mise/: config.toml
assets/: scoopfile.json  winget.json
home/: .chezmoi.toml.tmpl  .chezmoi.yaml.tmpl  .chezmoiignore  .chezmoiremove  .gitattributes  dot_wslconfig  symlink_Logs  symlink_dot_cache.tmpl  symlink_dot_npm.tmpl  symlink_dot_swiftpm.tmpl  symlink_dot_thumbnails.tmpl
playbooks/: debug.yml  device-dell-g15-linux.yml  device-dell-g15-wsl-arch.yml  device-dell-g15-wsl-fedora.yml  device-dell-g15-wsl-ubuntu.yml  device-dell-g15-wsl.yml  device-lima-alpine.yml  device-lima-default.yml  device-lima-ubuntu.yml  device-macbook.yml  device-surface-book.yml
schemas/: app-settings.yaml  eza-theme.yaml  infat-config.json  kitty.yaml  packages.json  packages.yaml
(+2179 files in other folders)
