[project]
name = "chezmoi-config"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.pylint."messages control"]
disable = [
  # Defaults
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "use-implicit-booleaness-not-comparison-to-string",
  "use-implicit-booleaness-not-comparison-to-zero",
  # These are config files, not modules
  "missing-module-docstring",
  "invalid-name",
]

[tool.ruff]
extend-exclude = ["symlink_*", "remove_*"]

[tool.ruff.lint]
extend-select = ["I", "W", "C", "PLE", "RUF"]

[tool.ty.src]
exclude = ["**/symlink_*", "**/remove_*"]

[tool.ty.environment]
python = "./.venv"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.workspace]
members = [
  "home/dot_config/private_xonsh",
]
